# LinPlayer

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: build-ffmpeg.yml  build-libmpv-pgs.yml  build.yml  extract-libmpv.yml  publish.yml
.tmp/appdata/.dart-tool/: CLIENT_ID  dart-flutter-telemetry-session.json
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  linass_jni.cpp  mpv_init_jni.cpp
android/app/src/main/cpp/include/ass/: ass.h
apple_tv/: Package.swift  README.md
apple_tv/LinPlayerTV/: Info.plist  LinPlayerTVApp.swift  MainTabView.swift  RootView.swift
apple_tv/LinPlayerTV.xcodeproj/: project.pbxproj
apple_tv/LinPlayerTV/Extensions/: View+Extensions.swift
apple_tv/LinPlayerTV/Models/: MediaModels.swift
apple_tv/LinPlayerTV/Services/: AuthManager.swift  EmbyApiClient.swift  ServerManager.swift
apple_tv/LinPlayerTV/Theme/: AppTheme.swift
assets/tv_remote/: remote.js  settings.html
docs/: BACKUP_FORMAT.md  FFmpegExtensionSetup.md  PLUGINS.md  PORTABLE.md  download.md
docs/interop/: lp_backup_interop.c
docs/oauth/: bangumi.html
ios/Runner/: Info.plist
legacy/tv-legacy/: analytics.settings  gradle.properties  settings.gradle.kts
legacy/tv-legacy/.android-home/: analytics.settings
legacy/tv-legacy/app/: build.gradle.kts
lib/: README.md  home_page.dart  main.dart  play_network_page.dart  play_network_page_exo.dart  player_screen_exo.dart  settings_page.dart  show_detail_page.dart
lib/core/api/: api_interfaces.dart  emby_api.dart  mock_api.dart
lib/core/network/: proxy_http_client.dart  proxy_settings.dart
lib/core/providers/: app_providers.dart  appearance_providers.dart  download_providers.dart  media_providers.dart  playback_providers.dart  proxy_providers.dart  server_providers.dart  sync_providers.dart
lib/core/services/: app_logger.dart  backup_crypto.dart  backup_identity.dart  cache_service.dart  cast_service.dart  (+13 more)
lib/routes/: app_router.dart
lib/tv/: tv_bangumi_page.dart  tv_focusable.dart  tv_imdb_page.dart  tv_tmdb_page.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist
oauth-proxy/: .dev.vars.example  README.md
oauth-proxy/functions/: _middleware.js
oauth-proxy/public/: index.html
oauth-proxy/site/: _config.fluid.yml
plugins_examples/uhdnow_traffic/: README.md  main.js  manifest.json
scripts/: fetch_mihomo_tv.ps1
test/: app_update_version_compare_test.dart  backup_format_doc_vector_test.dart  backup_hkdf_interop_test.dart  backup_seal_test.dart  common_config_test.dart  emby_media_counts_test.dart  prefetch_proxy_test.dart  watch_history_service_test.dart  widget_test.dart
(+178 files in other folders)
